--- a/docs/translations/pt-BR/pt-BR.json
+++ b/docs/translations/pt-BR/pt-BR.json
@@ -68,8 +68,13 @@
   "help": "Ajuda",
   "settings": "Configurações",
   "plugins": "Plugins",
+  "ctrlKey": "ctrl",
+  "shiftKey": "shift",
+  "altKey": "alt",
+  "error": "erro",
   "cache": "cache",
   "file": "arquivo",
+  "device": "Dispositivo",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -79,6 +84,7 @@
   "menuTrash": "Lixo",
   "menuSetGeneral": "Geral",
   "menuSetAbout": "Sobre",
+  "menuSetDevices": "Dispositivos",
   "menuAlertNoTags": "Sem etiquetas",
   "menuAlertNoTagsBody": "Você pode adicionar novas tags durante a edição de campos, na seção Tags.",
   "menuEmptyTrash": "Lixo",
@@ -144,6 +150,7 @@
   "genPsAmbiguous": "Símbolos ambíguos",
   "genPsInclude": "Símbolos adicionais para incluir",
   "genPsExample": "Exemplo de senha gerada",
+  "genPsPattern": "Padrão",
   "genPsPatternHelp": "Padrões podem ser utilizados para especificar regras customizadas para selecionar caracteres. Por exemplo, 1-AA irá gerar senhas começando com um digito, seguido por um hífen e duas letras. Você pode usar estes símbolos:",
   "genPsAllRanges": "Todos os simbolos",
   "genPsIncluded": "Símbolos adicionais acima",
@@ -227,6 +234,9 @@
   "openListErrorBody": "Ocorreu um erro ao carregar a lista de arquivos",
   "openShowAllFiles": "Mostrar todos",
   "openFileNoCacheError": "Arquivo não encontrado no armazenamento em cache. Isto pode acontecer porque o armazenamento do navegador foi limpo. Para abrir o arquivo, remova-o de KeeWeb e adicione-o novamente.",
+  "openChalRespLoading": "Carregando a lista de YubiKeys",
+  "openChalRespSelectYubiKey": "Selecione o YubiKey que você gostaria de usar",
+  "openChalRespErrorEmpty": "Nenhum YubiKey encontrado.",
   "detAttDownload": "Shift-clique no botão anexo para baixar ou",
   "detAttDelToRemove": "Excluir para remover",
   "detAttSave": "Salvar como ...",
