--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -71,8 +71,10 @@
   "ctrlKey": "ctrl",
   "shiftKey": "shift",
   "altKey": "alt",
+  "error": "错误",
   "cache": "缓存",
   "file": "密码数据库",
+  "device": "设备",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -82,6 +84,7 @@
   "menuTrash": "回收站",
   "menuSetGeneral": "通用",
   "menuSetAbout": "关于",
+  "menuSetDevices": "设备",
   "menuAlertNoTags": "无标签",
   "menuAlertNoTagsBody": "您可以在编辑标签字段时新建标签。",
   "menuEmptyTrash": "清空回收站",
@@ -314,6 +317,8 @@
   "detOtpQrErrorBody": "抱歉，我们无法读取此二维码，请再尝试一次，或者联系应用开发者并提供错误详情。",
   "detOtpQrWrong": "错误的二维码",
   "detOtpQrWrongBody": "您的二维码扫描成功，但未包含一次性密码数据。",
+  "detOtpClickToTouch": "点击以产生",
+  "detOtpGenerating": "生成中",
   "detLockField": "锁定该字段，锁定后其内容将不可被搜索及不可见。如需显示相关内容，请单击该字段。",
   "detUnlockField": "取消锁定该字段，使其内容立刻可被搜索及可见",
   "detRevealField": "提示",
@@ -511,6 +516,8 @@
   "setFileCloseNoSave": "关闭并放弃更改",
   "setFileDontClose": "不要关闭",
   "setFileFormatVersion": "文件格式",
+  "setFileDeviceSettings": "设置",
+  "setFileRefreshYubiKeyList": "刷新列表",
   "setShTitle": "快捷键",
   "setShShowAll": "显示所有项",
   "setShColors": "显示有颜色的项",
@@ -566,6 +573,8 @@
   "setPlTranslateLink": "将此应用翻译为您的语言",
   "setPlAutoUpdate": "自动更新",
   "setPlLoadGallery": "加载插件库",
+  "setDevicesTitle": "设备",
+  "setDevicesYubiKeyIntroLink": "这个文件",
   "setAboutTitle": "关于",
   "setAboutBuilt": "此应用使用以下优秀工具构建",
   "setAboutLic": "许可",
@@ -617,5 +626,7 @@
   "importCsvRun": "导入",
   "importIgnoreField": "忽略",
   "importTo": "条目将被导入到",
-  "importNewFile": "新文件"
+  "importNewFile": "新文件",
+  "yubiKeySlot": "插槽",
+  "yubiKeyDisabledErrorHeader": "usb不可用"
 }
